# device-detector-rs

./: Cargo.toml  LICENSE  README.md  build.rs
src/: db.rs  device_detector.rs  device_prefilter.rs  error.rs  helpers.rs  lib.rs  literal.rs  os_helpers.rs  parser.rs  parser_data.rs  substitution.rs
src/types/: client_hints.rs  client_type.rs  detection.rs  device_type.rs  mod.rs
tests/: integration.rs
