[package]
name = "device-detector-rs"
version = "0.1.0"
edition = "2021"
description = "Rust port of Matomo's device-detector — parses User-Agent strings into bot/OS/client/device info using the Matomo YAML regex database"
license = "MIT"

[dependencies]
aho-corasick = "1"
fancy-regex = "0.14"
rayon = "1"
indexmap = { version = "2", features = ["serde"] }
regex-syntax = "0.8"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"

[dev-dependencies]
fixtures = "2"

[build-dependencies]
fixtures = "2"
